--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ag-grid-react": "^33.2.4",
     "d3-fetch": "^3.0.1",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3"
   },
