--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paciolan/remote-component": "^2.13.0",
     "ag-grid-react": "^33.2.4",
     "d3-fetch": "^3.0.1",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-calendar": "^5.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
