--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@paciolan/remote-component": "^2.13.0",
     "ag-grid-react": "^33.2.4",
+    "d3": "^7.9.0",
     "d3-fetch": "^3.0.1",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-cdn-import": "^1.0.1"
   }
 }
